--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
 
     <h2>Work experience</h2>
     <p>I have no experience in this field</p>
-
+    <hr/>
     <h2>Skills</h2>
     <ol>
         <li>Full stack developer</li>
     </ol>
-
+    <hr/>
     <h2>Awards, certifications, or other achievements</h2>
     <ul>
     <li>NATIONAL PLAYER</li>
     <li>Dancer award</li>
     </ul>
-
+    <hr/>
+    <h2>Others</h2>
     <a href="hobbies.html" > <h3>Hobbies</h3></a>
     <a href="contact.html" > <h3>Contact </h3></a>
-
+    <hr/>
     <footer>
         <small>
            <p>Copyright © 2023 Football History Archives. All Rights Reserved.</p>
